@@ -3,30 +3,30 @@ format_sauvegarde:
 vitesseChamp_Facedom_fluide1.010000e+02
 Champ_Face
 1.010000e+02
-2
-61 1 
-2
-78 1 
+1
+61 
+1
+78 
 78
 -1.000000e-02 0.000000e+00 0.000000e+00 0.000000e+00 1.000000e-02 1.000000e-02 1.000000e-02 1.000000e-02 0.000000e+00 0.000000e+00 0.000000e+00 0.000000e+00 0.000000e+00 0.000000e+00 -1.763392e-02 -1.367511e-02 -8.321906e-04 1.056021e-02 2.020868e-02 2.279430e-02 1.426286e-02 -1.230344e-02 -1.637117e-03 -6.979735e-03 2.624457e-03 2.955155e-03 6.639689e-03 1.213261e-02 1.152389e-02 9.777333e-03 2.100325e-02 1.688323e-02 9.062081e-03 2.343220e-02 1.790838e-02 9.018273e-03 1.557317e-02 1.001251e-02 4.515284e-03 -5.684826e-03 -5.330485e-03 -1.066632e-02 -1.163712e-02 -1.202586e-02 -2.027051e-02 -1.901266e-02 -1.581320e-02 -2.395505e-02 -2.237297e-02 -7.257228e-03 -1.520449e-02 -2.220849e-02 -2.259564e-02 -8.051795e-03 -1.108448e-02 -1.438734e-02 -1.353356e-02 -8.689688e-03 -5.560662e-03 -5.497228e-03 -4.515284e-03 -1.000000e-02 0.000000e+00 -1.807049e-02 -1.611374e-02 -3.624201e-03 -3.641812e-03 7.035042e-03 1.486876e-02 1.808328e-02 1.178141e-02 -4.365700e-04 6.039942e-03 -2.875204e-03 6.057553e-03 2.532389e-03 -2.807528e-03 -7.518546e-03 
 -1
 pressionChamp_P0_VDFdom_fluide1.010000e+02
 Champ_P0_VDF
 1.010000e+02
-2
-25 1 
-2
-33 1 
+1
+25 
+1
+33 
 33
 2.227546e-03 2.697359e-03 2.830124e-03 1.938591e-03 2.195306e-03 2.249537e-03 1.609780e-03 1.761431e-03 1.804395e-03 1.401827e-03 1.420773e-03 1.484604e-03 1.468236e-03 1.384191e-03 1.277390e-03 1.287952e-03 1.382952e-03 1.110164e-03 8.748708e-04 8.223757e-04 8.735159e-04 4.486081e-04 4.959510e-05 0.000000e+00 4.405245e-06 1.694933e-03 1.642169e-03 1.427322e-03 1.459410e-03 1.477684e-03 1.579862e-03 1.427428e-03 8.351570e-04 
 -1
 temperatureChamp_P0_VDFdom_fluide1.010000e+02
 Champ_P0_VDF
 1.010000e+02
-2
-25 1 
-2
-33 1 
+1
+25 
+1
+33 
 33
 2.957423e+01 2.669796e+01 2.256832e+01 2.714188e+01 2.498917e+01 2.207408e+01 2.679912e+01 2.468294e+01 2.206777e+01 2.877567e+01 2.669774e+01 2.456202e+01 2.200212e+01 2.739756e+01 2.569160e+01 2.389831e+01 2.166005e+01 2.435064e+01 2.356589e+01 2.257319e+01 2.111543e+01 2.123248e+01 2.115769e+01 2.087607e+01 2.036982e+01 3.204962e+01 2.914558e+01 3.100365e+01 2.886555e+01 3.091622e+01 2.933448e+01 2.544064e+01 2.150289e+01 
 -1
