@@ -3,10 +3,10 @@ format_sauvegarde:
 temperatureChamp_P0_VDFdom_solide1.010000e+02
 Champ_P0_VDF
 1.010000e+02
-2
-25 1 
-2
-33 1 
+1
+25 
+1
+33 
 33
 3.997179e+01 3.989940e+01 3.983690e+01 3.989954e+01 3.971749e+01 3.952177e+01 3.983760e+01 3.952325e+01 3.926639e+01 3.974084e+01 3.929282e+01 3.900681e+01 3.959304e+01 3.888547e+01 3.847774e+01 3.932446e+01 3.818965e+01 3.885069e+01 3.699012e+01 3.793055e+01 3.492732e+01 3.588147e+01 3.132210e+01 3.014918e+01 2.501866e+01 3.755073e+01 3.599930e+01 3.346186e+01 2.946516e+01 2.361839e+01 3.973897e+01 3.928758e+01 3.899941e+01 
 -1
