@@ -3,10 +3,10 @@ format_sauvegarde:
 temperatureChamp_P0_VDFdom_solide1.010000e+02
 Champ_P0_VDF
 1.010000e+02
-2
-26 1 
-2
-37 1 
+1
+26 
+1
+37 
 37
 3.755073e+01 3.599930e+01 3.346186e+01 2.946516e+01 2.361839e+01 3.973897e+01 3.958965e+01 3.931961e+01 3.884505e+01 3.792529e+01 3.587787e+01 3.014795e+01 3.928758e+01 3.887526e+01 3.817447e+01 3.697203e+01 3.491029e+01 3.131060e+01 2.501487e+01 3.899941e+01 3.846074e+01 3.752315e+01 3.596482e+01 3.342861e+01 2.944359e+01 2.361218e+01 3.983690e+01 3.952177e+01 3.926639e+01 3.900681e+01 3.888547e+01 3.847774e+01 3.818965e+01 3.699012e+01 3.492732e+01 3.132210e+01 2.501866e+01 
 -1
